--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,4 +1,3 @@
-# .github/workflows/pages.yml
 name: Deploy md2pdf to GitHub Pages
 
 on:
@@ -17,6 +16,7 @@ concurrency:
 
 env:
   PUBLISH_DIR: build
+  BASE_PATH: /md2pdf
 
 jobs:
   build:
@@ -24,29 +24,53 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # Discover app directory: prefer ./md2pdf if it exists; else repo root (.)
+      - id: appdir
+        name: Detect application directory
+        run: |
+          if [ -f "./md2pdf/package.json" ]; then
+            echo "dir=./md2pdf" >> "$GITHUB_OUTPUT"
+          else
+            echo "dir=." >> "$GITHUB_OUTPUT"
+          fi
+          echo "Using app dir: $(cat $GITHUB_OUTPUT)"
+      
+      - name: Show directory for debugging
+        run: |
+          echo "App dir is: ${{ steps.appdir.outputs.dir }}"
+          ls -la ${{ steps.appdir.outputs.dir }}
+          if [ -f "${{ steps.appdir.outputs.dir }}/package.json" ]; then
+            cat ${{ steps.appdir.outputs.dir }}/package.json | head -n 50
+          fi
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: yarn
+          cache-dependency-path: |
+            ${{ steps.appdir.outputs.dir }}/yarn.lock
+            ${{ steps.appdir.outputs.dir }}/package.json
 
       - name: Install dependencies
+        working-directory: ${{ steps.appdir.outputs.dir }}
         run: yarn install --frozen-lockfile
-        working-directory: ./md2pdf   # remove this line if your package.json is at repo root
 
-      # Build CRA for sub-path deployment
+      # Create React App build for sub-path (/md2pdf)
       - name: Build (CRA with sub-path)
-        run: PUBLIC_URL=/md2pdf yarn build
-        working-directory: ./md2pdf   # remove if at repo root
+        working-directory: ${{ steps.appdir.outputs.dir }}
+        run: PUBLIC_URL=${{ env.BASE_PATH }} yarn build
 
-      # SPA fallback so deep links work
-      - name: Add 404.html
-        run: cp ./md2pdf/build/index.html ./md2pdf/build/404.html
+      # SPA fallback to support deep links on Pages
+      - name: Add 404.html (SPA fallback)
+        run: |
+          cp ${{ steps.appdir.outputs.dir }}/build/index.html \
+             ${{ steps.appdir.outputs.dir }}/build/404.html
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./md2pdf/${{ env.PUBLISH_DIR }}  # change to ./build if at repo root
+          path: ${{ steps.appdir.outputs.dir }}/${{ env.PUBLISH_DIR }}
 
   deploy:
     needs: build
@@ -57,3 +81,4 @@ jobs:
     steps:
       - id: deployment
         uses: actions/deploy-pages@v4
+
